# Venv

./: .env.example  .env.test  .env.test.local.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Makefile  README.md  setup.sh
.claude/: commands.md  errors.md  patterns.md  workflows.md
.context/: CLAUDE.md
.context/checkpoints/: checkpoint1.md  checkpoint10-ai-service.md  checkpoint11-initial-frontend-hooks.md  checkpoint12-frontend-UI-foundation.md  checkpoint2-scaffolding.md  checkpoint3-backend-config.md  checkpoint4-inital-models.md  checkpoint5-auth.md  checkpoint6-schemas.md  checkpoint7-main.py-inital-endpoints.md  checkpoint8-testing-framework.md  checkpoint9-upload-endpoint.md
.context/context/: MVP.md  overview.md  storage.md
.context/instructions/: checklist.md  system-instructions.md
.context/reference-docs/: geminiSDK-docs.md  openai-docs.md
.github/workflows/: backend-linter.yml
backend/: README.md  __init__.py  config.py  database.py  initial.md  main.py  pyproject.toml  settings.py
backend/auth/: __init__.py  jwt_auth.py  password.py
backend/migrations/: __init__.py
backend/models/: Base.py  Upload.py  User.py  __init__.py
backend/routers/: __init__.py  auth.py  health.py  search.py  upload.py
backend/schemas/: __init__.py  auth.py  base.py  search.py  upload.py  user.py
backend/services/: __init__.py  ai_service.py  search_service.py  storage_service.py
backend/tests/: README.md  __init__.py  conftest.py  run_tests.sh
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py  test_models_base.py  test_models_upload.py  test_models_user.py
frontend/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  README.md  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/assets/: fonts.css
frontend/src/components/: Layout.tsx
frontend/src/components/FileUpload/: FileUpload.css  FileUpload.tsx  index.ts
frontend/src/components/Layout/: Layout.css  Layout.tsx
frontend/src/components/css/: Layout.css
frontend/src/hooks/: index.ts  useAuth.ts  useSearch.ts  useUpload.ts
frontend/src/pages/Auth/: Login.css  Register.css  Register.tsx
frontend/src/pages/Dashboard/: Dashboard.css  Dashboard.tsx  Dashboard.tsx 
frontend/src/pages/Home/: Home.css  Home.tsx
frontend/src/pages/Login/: Login.css  Login.tsx
frontend/src/pages/NotFound/: NotFound.css  NotFound.tsx
frontend/src/pages/Register/: Register.css  Register.tsx
frontend/src/pages/Search/: Search.css  Search.tsx
frontend/src/pages/Upload/: Upload.css  Upload.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: api.ts  env.d.ts  index.ts  models.ts
frontend/src/utils/: formatters.ts  validators.ts
infra/dev/: docker-compose.yml
infra/dev/docker/: Dockerfile.backend  Dockerfile.frontend
infra/dev/nginx/: dev.conf
infra/prod/: docker-compose.yml
infra/prod/docker/: Dockerfile.backend  Dockerfile.frontend
infra/prod/nginx/: prod.conf
meta/: CHANGELOG.md  CONTRIBUTING  LICENSE  initial.md
meta/misc/: Gemini-Models.md  requirements.deps
